--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
+
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
@@ -14,6 +13,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include "partials/nav.html.twig" %}
         {% block body %}{% endblock %}
     </body>
 </html>
